--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "client-frontend",
+  "name": "ticket",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/Vitolk/client-frontend",
   "author": "Pestartz <iskanderbakhvalov1@gmail.com>",
-  "license": "GPL-3.0-only",
   "scripts": {
     "dev": "webpack-dev-server --hot --env.NODE_ENV=dev --mode=development",
     "build": "webpack --env.NODE_ENV=production",
